srv/push/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: push
spec:
  replicas: 1
  selector:
    matchLabels:
      name: push-srv
      micro: service
  template:
    metadata:
      labels:
        name: push-srv
        micro: service
    spec:
      containers:
        - name: push
          command: [
		"/push-srv",
	  ]
          image: 10.9.19.140/test/push-srv
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
            name: push-port
          - containerPort: 18080
            name: push-ws-port
        - name: health
          command: [
        "/health",
        "--health_address=0.0.0.0:8081",
		"--server_name=tpush.srv.push",
		"--server_address=0.0.0.0:8080"
	  ]
          image: 10.9.19.140/test/health
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 3
            periodSeconds: 3
