srv/push/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: push
  namespace: default
  labels:
    name: push-srv
    micro: service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    name: push-srv
    micro: service
  type: LoadBalancer
