srv/push/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: push
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: push.hkdev
      http:
        paths:
          - path: /
            backend:
              serviceName: push
              servicePort: 80
